--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,11 +25,17 @@ body {
     background-color: #FFF;
     box-shadow: 0px 2px 2px #666;
     border-radius: 3px;
-    text-align: right;    
+    text-align: right;  
 }
 
 a .btn {
     margin-top: 30px;
+    cursor: pointer;
+}
+
+footer p {
+    font-size: 14px;
+    padding: 10px 20px;
 }
 /* --- end main ---*/
 /* --- axis --- */
