--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,6 +41,14 @@ a .btn {
     cursor: pointer;
 }
 
+.labelArea {
+    fill: #0192b5;
+    text-anchor: left;
+    font-size: 12px;
+    font-family: sans-serif;
+    text-transform: uppercase; 
+}
+
 footer {
     margin-top: 30px;
     padding: 20px;
@@ -108,37 +116,10 @@ td.legend-color-guide div {
 /* --- end GENERAL --- */
 /* --- PARKMAP --- */
 div#viz {
+    width: 100%;
     margin: 0 auto;
     text-align: center;
-}
-
-#viz-tooltip {
-    position: absolute;
-    width: 100px;
-    height: auto;
-    padding: 10px;
-    background: #FFF;
-    border-radius: 5px;
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.4);
-}
-
-#viz-tooltip.hidden {
-    display: none;
-}
-
-#viz-tooltip p {
-    margin: 0;
-    font-family: sans-serif;
-    font-size: 12px;
-    text-align: left;
-}
-
-.labelArea {
-    fill: #0192b5;
-    text-anchor: left;
-    font-size: 12px;
-    font-family: sans-serif;
-    text-transform: uppercase; 
+    overflow: auto;
 }
 
 /* --- end PARKMAP --- */
@@ -221,7 +202,7 @@ div#viz {
 /* - end axis - */
 /* - line - */
 .cumLineChart .nvd3 .nv-groups path.nv-line {
-    fill: none;
+    fill: none;    
 }
 
 .cumLineChart .nvd3.nv-scatter .nv-groups .nv-point.hover,
@@ -246,54 +227,55 @@ div#viz {
 /* - end legend - */
 /* --- end LINE CHART --- */
 /* --- BUBBLE CHART --- */
-#bubblechart {
+.bubbleChart {
     width: 100%;
     text-align: center;
 }
 
-#bubblechart g.nv-point-paths {
+.bubbleChart g.nv-point-paths {
     opacity:0;
+    cursor: pointer;
 }
 
-#bubblechart .nvd3 .nv-groups .nv-point.hover {
+.bubbleChart .nvd3 .nv-groups .nv-point.hover {
     stroke-width: 20px;
     stroke-opacity: .5;
 }
 
-#bubblechart .nvd3 .nv-scatter .nv-point.hover {
+.bubbleChart .nvd3 .nv-scatter .nv-point.hover {
     fill-opacity: 1;
 }
 
-#bubblechart .nv-noninteractive {
+.bubbleChart .nv-noninteractive {
     pointer-events: none;
 }
 
-#bubblechart .nv-distx, .nv-disty {
+.bubbleChart .nv-distx, .nv-disty {
     pointer-events: none;
 }
 
 /* - axis - */
-#bubblechart .nv-indexLine {
+.bubbleChart .nv-indexLine {
     width: 1px;
     fill: #CCC;
 }
 
-#bubblechart path.domain {
+.bubbleChart path.domain {
     stroke: #CCC;
 }
 
-#bubblechart .tick line {
+.bubbleChart .tick line {
     stroke-width: 1px;
     stroke: #eee;
 }
 
-#bubblechart g.tick, #bubblechart g.nv-axisMaxMin {
+.bubbleChart g.tick, .bubbleChart g.nv-axisMaxMin {
     font-size: 12px;
     fill: #666;
     opacity:1;
 }
 
-#bubblechart text.nv-axislabel {
+.bubbleChart text.nv-axislabel {
     fill: #0192b5;    
     text-transform: uppercase;
     font-size: 12px;
@@ -302,3 +284,12 @@ div#viz {
 /* - end axis - */
 
 /* --- end BUBBLE CHART --- */
+/* --- PARKMAP ID --- */
+div#mov-id {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    overflow: auto;
+}
+
+/* --- end PARKMAP ID --- */
